<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">My Quotes</string>
    <string name="action_settings">Settings</string>
    <string name="AddQuote">Add new quote</string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="title_activity_add_quote">Add Quote</string>
    <string name="title_activity_display_quote">Display Quote</string>
    <string name="addquote">Add new quote</string>
    <string name="input_quote_hint">Quote</string>
    <string name="input_favourite_hint">Favourite</string>
    <string name="input_author_hint">Author</string>
    <string name="input_title_hint">From…</string>
    <string name="input_tag_hint">Tags (comma or + to add)</string>
    <string name="input_image_hint">Choose book cover from:</string>
    <string name="input_from_gallery">Gallery</string>
    <string name="input_from_camera">Camera</string>
    <string name="input_from_google">Google</string>
    <string name="cover">Cover</string>
    <string name="done">Save</string>
    <string name="discard">Cancel</string>
    <string name="save">Save</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="share">Share</string>
    <string name="next_random_fav">Next favourite</string>
    <string name="add_tag">Add Tag</string>
    <string name="edit">Edit</string>
    <string name="covers_folder">book_covers</string>
    <string name="app_folder">My Quotes</string>
    <string name="tags_cover_heading">Tags &amp; Cover</string>
    <string name="no_fav_quotes_msg">No favourite quotes.\nPlease add some!</string>
    
    <string name="view_quote">View Quote</string>
    <string name="more_author">More from this Author</string>
    <string name="more_title">More from this Title</string>

    <!-- Croutons -->
    <string name="ct_missing_tag">Write tag text</string>
    <string name="ct_deleting">Deleting…</string>
    <string name="ct_deleting_succeed">Quote deleted!</string>
    <string name="ct_deleting_fail">Error while deleting</string>
    <string name="ct_adding">Adding…</string>
    <string name="ct_adding_succeed">Quote added!</string>
    <string name="ct_adding_fail">Error while adding</string>
    <string name="ct_updating">Updating…</string>
    <string name="ct_updating_succeed">Quote updated!</string>
    <string name="ct_updating_fail">Error while updating</string>
    <string name="ct_updating_fav_fail">Error while updating favourite</string>
    <string name="ct_discarding">Not saving…</string>
    <string name="ct_opening_camera">Opening camera…</string>
    <string name="ct_opening_image_picker">Opening image picker…</string>
    <string name="ct_opening_google_image_search">Searching for cover…</string>
    <string name="ct_validation_empty_quote">Quote can\'t be empty</string>
    <string name="ct_image_from_camera_failed">Getting picture from camera failed</string>
    <string name="ct_author_blank">Can\'t show more quotes from a blank author</string>
    <string name="ct_source_blank">Can\'t show more quotes from a blank source title</string>

    <!-- Image descriptions -->

	<!-- Tabs -->
    <string name="title_activity_fragment_tabs_pager">FragmentTabsPager</string>
    <string name="title_section1">Tags</string>
    <string name="title_section2">Favourite</string>
    <string name="title_section3">All Quotes</string>
    
    
    <!-- EULA, login, and about -->
    <string name="title_about">About</string>
    <string name="ok">OK</string>
    <string name="about_licenses">Open Source Resources</string>
    <string name="about_add_content">Add Random Quotes</string>
    <string name="about_clear_content">Clear Quotes Database</string>
    <string name="about_body"><![CDATA[
        <b>MyQuotes App</b><br>
        Created by: <a href="mailto:mjaworski1988@gmail.com"><b>Marek Jaworski</b></a><br>
        Version %s<br>
    ]]></string>
    

</resources>