<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal"
    android:gravity="center_horizontal"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/header"
        style="@style/sectionHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:text="@string/input_image_hint" />

    <ImageView
        android:id="@+id/cover_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/header"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:background="@drawable/image_border"
        android:contentDescription="@string/input_image_hint"
        android:padding="4dp"
        android:scaleType="fitCenter"
        android:src="@drawable/cover_template" />

    <LinearLayout
        android:id="@+id/form6"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/cover_image"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/image_from_disk"
            style="@style/input_button_with_image"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_folder_with_image"
            android:text="@string/input_from_gallery" />

        <include layout="@layout/divider_forms" />

        <Button
            android:id="@+id/image_from_camera"
            style="@style/input_button_with_image"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_image"
            android:text="@string/input_from_camera" />


        <Button
            android:id="@+id/image_from_google"
            style="@style/input_button_with_image"
            android:layout_weight="1"
            android:drawableTop="@drawable/ic_action_google"
            android:text="@string/input_from_google"/>
    </LinearLayout>

</RelativeLayout>