<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:myTags="http://schemas.android.com/apk/res/com.mjaworski.myQuotes"
	android:layout_width="wrap_content"
	android:layout_height="wrap_content">

	<RelativeLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin">

		<LinearLayout
			android:id="@+id/quote_wrapper"
			style="@style/input_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_alignParentTop="true"
			android:visibility="visible">

			<ImageView
				android:id="@+id/quote_icon_open"
				style="@style/image_label"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:contentDescription="@string/input_quote_hint"
				android:src="@drawable/ic_blue_open_quote" />

			<include layout="@layout/divider_forms" />

			<RelativeLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:padding="@dimen/activity_horizontal_margin">

				<com.mjaworski.myQuotes.Utils.TypefaceTextView
					android:id="@+id/quote_text"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_centerHorizontal="true"
					android:layout_marginBottom="@dimen/activity_vertical_margin"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:fontFamily="sans-serif-light"
					android:gravity="center"
					android:maxEms="20"
					android:textSize="@dimen/quote_display_quotation_font_size"
					android:textStyle="italic"
					myTags:typeface="Roboto-LightItalic.ttf" />

				<LinearLayout
					android:id="@+id/quote_divider_wrapper"
					android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:layout_below="@+id/quote_text"
					android:layout_centerHorizontal="true"
					android:gravity="center"
					android:weightSum="1.0">
					<View
						android:id="@+id/quote_divider"
						android:layout_width="0dp"
						android:layout_height="2px"
						android:layout_weight="0.5"
						android:background="@drawable/quote_divider" />
				</LinearLayout>

				<TextView
					android:textIsSelectable="true"
					android:id="@+id/quote_author"
					style="@style/source_author_text"
					android:layout_alignRight="@+id/quote_text"
					android:layout_below="@+id/quote_divider_wrapper"
					android:layout_marginRight="0dp"
					android:layout_marginTop="@dimen/activity_vertical_margin"
					android:fontFamily="sans-serif-condensed"
					android:textStyle="bold" />

				<TextView
					android:textIsSelectable="true"
					android:id="@+id/quote_source"
					style="@style/source_author_text"
					android:layout_alignRight="@+id/quote_text"
					android:layout_below="@+id/quote_author"
					android:layout_margin="0dp"
					android:fontFamily="sans-serif-condensed"
					android:textStyle="italic"
					/>
			</RelativeLayout>
		</LinearLayout>

		<LinearLayout
			android:id="@+id/fav_quote_buttons_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_below="@id/quote_wrapper"
			android:visibility="visible">

			<Button
				android:id="@+id/btn_share_quote"
				style="@style/input_button_with_image"
				android:layout_weight="1"
				android:drawableLeft="@drawable/ic_action_share"
				android:text="@string/share" />

			<include layout="@layout/divider_forms" />

			<Button
				android:id="@+id/btn_next_fav_quote"
				style="@style/input_button_with_image"
				android:layout_weight="1"
				android:drawableLeft="@drawable/ic_star"
				android:text="@string/next_random_fav" />

		</LinearLayout>
		
		
		<LinearLayout
			android:id="@+id/no_fav_quote_buttons_wrapper"
			android:layout_below="@id/fav_quote_buttons_wrapper"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:visibility="gone"
			>

			<Button
				android:id="@+id/btn_add_quote"
				style="@style/input_button_with_image"
				android:layout_weight="1"
				android:layout_width="0dp"
				android:drawableLeft="@drawable/ab_hl_content_new"
				android:text="@string/AddQuote" />

		</LinearLayout>

		



	</RelativeLayout>

</ScrollView>