<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/base_scroll"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".AddQuote" >

        <LinearLayout
            android:id="@+id/form1"
            style="@style/input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true" >

            <ImageView
                android:id="@+id/quote_icon_open"
                style="@style/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/input_quote_hint"
                android:src="@drawable/ic_blue_open_quote" />

            <include layout="@layout/divider_forms" />

            <EditText
                android:id="@+id/quote"
                style="@style/input_text"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:hint="@string/input_quote_hint"
                android:inputType="textCapSentences"
                 >
            </EditText>

            <include layout="@layout/divider_forms" />

            <CheckBox
                android:id="@+id/quote_favourite"
                style="@style/fav_star_style"
                android:contentDescription="@string/input_favourite_hint" />
        </LinearLayout>

       

        <LinearLayout
            android:id="@+id/form2"
            style="@style/input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form1" >

            <ImageView
                android:id="@+id/book_icon"
                style="@style/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/input_title_hint"
                android:src="@drawable/ic_blue_book" />

            <include layout="@layout/divider_forms" />

            <AutoCompleteTextView
                android:id="@+id/title"
                style="@style/input_text"
                android:completionThreshold="1"
                android:hint="@string/input_title_hint"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>

         <LinearLayout
            android:id="@+id/form3"
            style="@style/input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form2" >

            <ImageView
                android:id="@+id/author_icon"
                style="@style/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/input_author_hint"
                android:src="@drawable/ic_blue_author" />

            <include layout="@layout/divider_forms" />

            <AutoCompleteTextView
                android:id="@+id/author"
                style="@style/input_text"
                android:completionThreshold="1"
                android:hint="@string/input_author_hint"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:singleLine="true" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/form4"
            style="@style/input_wrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form3" >

            <ImageView
                android:id="@+id/tag_icon"
                style="@style/image_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/input_tag_hint"
                android:src="@drawable/ic_blue_tag" />

            <include layout="@layout/divider_forms" />

            <RelativeLayout
                android:id="@+id/tags_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/form_margin"
                android:layout_marginTop="@dimen/form_margin" >

                <AutoCompleteTextView
                    android:id="@+id/tag"
                    style="@style/input_text"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/add_tag"
                    android:completionThreshold="1"
                    android:hint="@string/input_tag_hint"
                    android:maxLines="1"
                    android:singleLine="true" />

                <ImageButton
                    android:id="@+id/add_tag"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="@dimen/min_touchable_height"
                    android:layout_height="@dimen/min_touchable_height"
                    android:layout_above="@+id/horizontalScrollView1"
                    android:layout_alignParentRight="true"
                    android:layout_margin="0dp"
                    android:background="?selectableItemBackground"
                    android:src="@drawable/ab_hl_content_new"
                    android:contentDescription="@string/add_tag" />

                <HorizontalScrollView
                    android:id="@+id/horizontalScrollView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@id/tag"
                    android:layout_alignRight="@id/add_tag"
                    android:layout_below="@id/tag" >

                    <LinearLayout
                        android:id="@+id/tags_added_container"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                    <!-- <include -->
                    <!-- android:layout_width="wrap_content" -->
                    <!-- android:layout_height="wrap_content" -->
                    <!-- layout="@layout/inline_lv_tags" /> -->

                </HorizontalScrollView>
            </RelativeLayout>
        </LinearLayout>

        <include
            android:id="@+id/form5_ref"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/form4"
            layout="@layout/cover_input" />
    </RelativeLayout>

</ScrollView>